Fix alignment of secondary tabs on edit page.

--- a/css/views-admin.css
+++ b/css/views-admin.css
@@ -20,6 +20,7 @@
 .views-edit-view .views-displays .secondary {
   text-align: left;
   float: left;
+  margin: 0;
 }
 
 /**
